syntax = "proto3";
package Cratis.Chronicle.Contracts.Observation.Reactors;
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message AppendedEvent {
   EventContext Context = 1;
   string Content = 2;
}
message Causation {
   SerializableDateTimeOffset Occurred = 1;
   string Type = 2;
   map<string,string> Properties = 3;
}
message EventContext {
   EventType EventType = 1;
   string EventSourceType = 2;
   string EventSourceId = 3;
   uint64 SequenceNumber = 4;
   string EventStreamType = 5;
   string EventStreamId = 6;
   SerializableDateTimeOffset Occurred = 7;
   string EventStore = 8;
   string Namespace = 9;
   .bcl.Guid CorrelationId = 10; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   repeated Causation Causation = 11;
   Identity CausedBy = 12;
   EventObservationState ObservationState = 13;
   repeated string Tags = 14;
   string Hash = 15;
}
enum EventObservationState {
   // this is a composite/flags enumeration
   None = 0;
   Initial = 1;
   HeadOfReplay = 2;
   Replay = 4;
   TailOfReplay = 8;
}
message EventType {
   string Id = 1;
   uint32 Generation = 2;
   bool Tombstone = 3;
}
message EventTypeWithKeyExpression {
   EventType EventType = 1;
   string Key = 2;
}
message EventsToObserve {
   string Partition = 1;
   repeated AppendedEvent Events = 2;
}
message HasReactorRequest {
   string EventStore = 1;
   string Namespace = 2;
   string ReactorId = 3;
}
message HasReactorResponse {
   bool Exists = 1;
   string EventSequenceId = 2;
}
message Identity {
   string Subject = 1;
   string Name = 2;
   string UserName = 3;
   Identity OnBehalfOf = 4;
}
enum ObservationState {
   None = 0;
   Success = 1;
   Failed = 2;
}
message OneOf_RegisterReactor_ReactorResult {
   RegisterReactor Value0 = 1;
   ReactorResult Value1 = 2;
}
message ReactorDefinition {
   string ReactorId = 1;
   string EventSequenceId = 2;
   repeated EventTypeWithKeyExpression EventTypes = 3;
   bool IsReplayable = 4; // default value could not be applied: True
   repeated string Tags = 5;
}
message ReactorMessage {
   OneOf_RegisterReactor_ReactorResult Content = 1;
}
message ReactorResult {
   string Partition = 1;
   ObservationState State = 2;
   uint64 LastSuccessfulObservation = 3;
   repeated string ExceptionMessages = 4;
   string ExceptionStackTrace = 5;
}
message RegisterReactor {
   string ConnectionId = 1;
   string EventStore = 2;
   string Namespace = 3;
   ReactorDefinition Reactor = 4;
}
message SerializableDateTimeOffset {
   int64 Ticks = 1;
   double OffsetMinutes = 2;
}
service Reactors {
   rpc HasReactor (HasReactorRequest) returns (HasReactorResponse);
   rpc Observe (stream ReactorMessage) returns (stream EventsToObserve);
}
